add current ICM11 app_sf_responsive